fix buttons layout on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -45,18 +45,30 @@
 }
 
 @media screen and (max-width: 500px) {
+  .main {
+    width: 100%;
+  }
+
   .quizzes_ctn {
     width: 97vw;
   }
 
   .quizzes_btns {
     display: flex;
-    padding: 0 1rem;
+    box-sizing: border-box;
+    padding: 0 1.4rem;
     gap: 0.6rem;
+    margin-top: 1.5rem;
     margin-bottom: 3rem;
+    width: 100%;
   }
 
   .check_btn {
     margin: 0;
+    padding: 0.9rem 1.5rem;
+  }
+
+  .new-category_btn {
+    padding: 0.9rem 1.2rem;
   }
 }
