--- a/src/styles/menu-screen.css
+++ b/src/styles/menu-screen.css
@@ -46,5 +46,10 @@
 
   .menu-categories_label > select {
     margin-top: 0.5rem;
+    margin-left: 0;
+  }
+
+  .menu_btn {
+    width: 70%;
   }
 }
