--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -31,4 +31,8 @@
   .modal-content {
     width: 55vw;
   }
+
+  .modal_btn {
+    width: 80%;
+  }
 }
